Now the ball will bounce off the inside of paddles instead of overlapping a bit.

--- a/pong.html
+++ b/pong.html
@@ -19,6 +19,7 @@
 	var paddle2Y = 250;
 	const PADDLE_HEIGHT = 100;
 	const PADDLE_WIDTH = 10;
+	const BALL_SIZE = 10;
 
 	function calculateMousePos(evt) {
 		var rect = canvas.getBoundingClientRect();
@@ -83,35 +84,40 @@
 			return;
 		}
 
+		// So the right paddle plays with you
 		computerMovement();
 
 		ballX += ballSpeedX;
 		ballY += ballSpeedY;
 
-		if (ballX < 0) {
+		// When ball hits left side of screen
+		if (ballX < 0 + PADDLE_WIDTH + BALL_SIZE) {
+			// If the ball hits the left paddle then it should bounce back
 			if (ballY > paddle1Y && ballY < paddle1Y + PADDLE_HEIGHT) {
 				ballSpeedX = -ballSpeedX;
-				// adjust angle of ball based on where it hits the paddle
+				// Adjust angle of ball based on where it hits the paddle
 				var deltaY = ballY - (paddle1Y + PADDLE_HEIGHT / 2);
 				ballSpeedY = deltaY * 0.35;
-
-			} else {
+			} else { // Else the paddle missed and the other player scores a point
 				player2Score++;
 				ballReset();
 			}
 		}
-		if (ballX > canvas.width) {
+		// When ball hits right side of screen
+		if (ballX > canvas.width - PADDLE_WIDTH - BALL_SIZE) {
+			// If the ball hits the right paddle then it should bounce back
 			if (ballY > paddle2Y && ballY < paddle2Y + PADDLE_HEIGHT) {
 				ballSpeedX = -ballSpeedX;
-				// adjust angle of ball based on where it hits the paddle
+				// Adjust angle of ball based on where it hits the paddle
 				var deltaY = ballY - (paddle2Y + PADDLE_HEIGHT / 2);
 				ballSpeedY = deltaY * 0.35;
-			} else {
+			} else { // Else the paddle missed and the other player scores a point
 				player1Score++;
 				ballReset();
 			}
 		}
 
+		// Keeps the ball bouncing off the top and bottom of the screen
 		if (ballY < 0) {
 			ballSpeedY = -ballSpeedY;
 		}
@@ -148,8 +154,9 @@
 		colorRect(canvas.width - PADDLE_WIDTH - 1, paddle2Y, PADDLE_WIDTH, PADDLE_HEIGHT, 'white');
 
 		// draws the ball
-		colorCircle(ballX, ballY, 10, 'white');
+		colorCircle(ballX, ballY, BALL_SIZE, 'white');
 
+		// adds score to screen
 		canvasContext.fillText(player1Score, 100, 100);
 		canvasContext.fillText(player2Score, canvas.width - 100, 100);
 	}
