moved css styles to their own external file and linked in pong.html

--- a/pong.html
+++ b/pong.html
@@ -3,59 +3,7 @@
 
 <head>
 	<title>Pong</title>
-	<!-- <link rel="stylesheet" href="styles.css"> -->
-
-	<style>
-		body {
-			color: white;
-		}
-
-		#game-canvas {}
-
-		#game-over {
-			font-size: 6em;
-			display: none;
-			position: absolute;
-			top: 184px;
-			left: 175px;
-			background-color: black;
-		}
-
-		#you-won {
-			font-size: 6em;
-			display: none;
-			position: absolute;
-			top: 175px;
-			left: 217px;
-			background-color: black;
-			padding: 10px 0 0 0;
-		}
-
-		#continue {
-			font-size: 2em;
-			display: none;
-			position: absolute;
-			top: 461px;
-			left: 296px;
-			background-color: black;
-			padding: 20px 0 20px 0;
-		}
-
-		.playerScore {
-			font-size: 30;
-			position: absolute;
-		}
-
-		#player1Score {
-			top: 0px;
-			left: 368px;
-		}
-
-		#player2Score {
-			top: 0px;
-			left: 430px;
-		}
-	</style>
+	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
