--- a/pong.html
+++ b/pong.html
@@ -14,6 +14,7 @@
 	<h1 id="player2Score" class="playerScore">0</h1>
 
 	<canvas id="game-canvas" width="800" height="600"></canvas>
+	<img class="ballSource" id="ping88" src="ping88.png" width="88" height="88"/>
 
 	<script src="pong.js"></script>
 </body>
