--- a/index.html
+++ b/index.html
@@ -2,21 +2,26 @@
 <html>
 
 <head>
-	<title>Ping</title>
-	<link rel="stylesheet" href="styles.css">
+    <title>Ping</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<h1 id="game-over">Game Over</h1>
-	<h1 id="you-won">You Won!</h1>
-	<h1 id="continue">Click to continue...</h1>
-	<h1 id="player1Score" class="playerScore">0</h1>
-	<h1 id="player2Score" class="playerScore">0</h1>
+        <h1>Ping</h1>
+        <h3>Control left paddle with mouse/tap</h3>
+        <h3>Control right paddle with up/down</h3>
+    <div>
+        <h1 id="game-over">Game Over</h1>
+        <h1 id="you-won">You Won!</h1>
+        <h1 id="continue">Click to continue...</h1>
+        <h1 id="player1Score" class="playerScore">0</h1>
+        <h1 id="player2Score" class="playerScore">0</h1>
 
-	<canvas id="game-canvas" width="800" height="600"></canvas>
-	<img class="spriteSource" id="ping88" src="ping88.png" width="88" height="88"/>
+        <canvas id="game-canvas" width="800" height="600"></canvas>
+        <img class="spriteSource" id="ping88" src="ping88.png" width="88" height="88"/>
 
-	<script src="pong.js"></script>
+    </div>
+    <script src="pong.js"></script>
 </body>
 
 </html>
