--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 </head>
 
 <body>
-        <h1>Ping</h1>
-        <h3>Control left paddle with mouse/tap</h3>
-        <h3>Control right paddle with up/down</h3>
+    <h1>Ping</h1>
     <div>
         <h1 id="game-over">Game Over</h1>
         <h1 id="you-won">You Won!</h1>
@@ -20,6 +18,10 @@
         <canvas id="game-canvas" width="800" height="600"></canvas>
         <img class="spriteSource" id="ping88" src="ping88.png" width="88" height="88"/>
 
+    </div>
+    <div>
+        <span>Control left paddle with mouse/tap</span>
+        <span>Control right paddle with up/down</span>
     </div>
     <script src="pong.js"></script>
 </body>
