--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img class="spriteSource" id="ping88" src="ping88.png" width="88" height="88"/>
 
     </div>
-    <div>
+    <div class="instructions">
         <span>Control left paddle with mouse/tap</span>
         <span>Control right paddle with up/down</span>
     </div>
