--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
     <h1>Ping</h1>
     <div>
-        <h1 id="game-over">Game Over</h1>
-        <h1 id="you-won">You Won!</h1>
-        <h1 id="continue">Click to continue...</h1>
+        <h1 id="game-over">Game Over!</h1>
+        <h2 id="p1-won">Mouse Player Won!</h2>
+        <h2 id="p2-won">Keyboard Player Won!</h2>
+        <h2 id="continue">Click to continue...</h2>
         <h1 id="player1Score" class="playerScore">0</h1>
         <h1 id="player2Score" class="playerScore">0</h1>
 
